Updating global suppression file.

--- a/IntroMvcDemo/IntroMvcDemo.Common/IntroMvcDemo.Common.csproj
+++ b/IntroMvcDemo/IntroMvcDemo.Common/IntroMvcDemo.Common.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Arg.cs" />
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
